--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan&display=swap"); /* font-Family: 'League Spartan' */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  height: 100vh;
+  width: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  background-color: #C4AE78;
 }
 
-.App-link {
-  color: #61dafb;
+.app-container {
+  height: 400px;
+  width: 600px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bg-color {
+  height: 100%;
+  width: 100%;
+}
+
+.form {
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.input {
+  width: 100%;
+  font-size: 1rem;
+  color: black;
+  border: 2px solid black;
+  padding: 10px;
+  padding-left: 20px;
+  outline: none;
+  transition: 0.4s ease;
+}
+
+.submit {
+  padding: 10px 20px;
+  font-size: 1rem;
+  border: 2px solid black;
+  border-left: 0px;
+  background-color: white;
+  outline: none;
+  cursor: pointer;
+  transition: 0.4s ease;
+}
+
+.submit:hover {
+  color: #F9F6F0;
+  background-color: black;
+}
+
+.invalid {
+  font-size: 1.2rem;
+  font-family: 'League Spartan', sans-serif;
+  color: red;
+  position: relative;
+  left: 10px;
+  margin-top: 15px;
 }
