--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,35 @@
   height: 100vh;
   width: 100%;
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
   background-color: #C4AE78;
 }
 
+.app-title {
+  text-align: center;
+  position: relative;
+  top: 100px;
+}
+
+.app-title h1 {
+  font-size: 3rem;
+  font-weight: 500;
+}
+
 .app-container {
+  height: 90vh;
+  width: 100%;
+  max-height: 800px;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.bg-container {
   height: 400px;
   width: 600px;
 }
@@ -60,11 +82,19 @@
   background-color: black;
 }
 
+.valid,
 .invalid {
   font-size: 1.2rem;
   font-family: 'League Spartan', sans-serif;
-  color: red;
   position: relative;
   left: 10px;
   margin-top: 15px;
+}
+
+.valid {
+  color: black;
+}
+
+.invalid {
+  color: red;
 }
